<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ver">Ver</string>
    <string name="name">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="individual">Individual: ₵</string>
    <string name="compartida">Compartida: ₵</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="telefonos">Teléfono 1:</string>
    <string name="celular">Celular:</string>
    <string name="direccion">Dirección</string>
    <string name="latitud">Latidud:</string>
    <string name="longitud">Logitud:</string>
    <string name="mensajell">De no definir no se mostrara en el mapa</string>
    <string name="general">General:</string>
    <string name="servicios">Servicios:</string>
    <string name="amueblado">Amueblado:</string>
    <string name="agua">Agua</string>
    <string name="electricidad">Electricidad</string>
    <string name="alimentacion">Alimentacion</string>
    <string name="internet">Internet</string>
    <string name="cable">Cable</string>
    <string name="otro">Otro:</string>
    <string name="infogeneral">Información General</string>
    <string name="provincia">Provincia:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="direccionexactaa">Direccion Exacta:</string>
    <string name="señas">Señas:</string>


    <string-array name="Contrato">
        <item>Alquiler</item>
        <item>Venta</item>
    </string-array>
    <string-array name="Filtro">
        <item>Filtrar:</item>
        <item>Provincia</item>
        <item>Contrato</item>
    </string-array>

    <string-array name="Tipo">
        <item>Casa</item>
        <item>Apartamento</item>
    </string-array>


    <string name="title_activity_registrar">Registrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_acdetalles">ACDetalles</string>

</resources>
